--- a/discografia.html
+++ b/discografia.html
@@ -45,7 +45,7 @@
             <h4>DISCOGRAFÍA</h4>
             <div class="columnas">
                 <div class="columna">
-                    <img src="Discografía1.jpeg">
+                    <img src="uno.jpeg">
                     <p>Greatest Hits </p>
                     <ol>
                         <li>Livin’ On A Prayer</li>
@@ -67,7 +67,7 @@
                         </ol>
                 </div>
                 <div class="columna">
-                    <img src="Discografía2.jpeg">
+                    <img src="dos.jpeg">
                     <p>Have a Nice Day </p>
                     <ol>
                     <li>Have A Nice Day - 3:50</li>
@@ -90,7 +90,7 @@
                     </ol>
                 </div>
                 <div class="columna">
-                    <img src="Discografía3.jpeg">
+                    <img src="tres.jpeg">
                     <p>Crush</p>
                     <ol>
                     <li>«It's My Life» (Jon Bon Jovi/Richie Sambora/Max Martin) - 3:47</li>
@@ -112,7 +112,7 @@
                     </ol>
                 </div>
                 <div class="columna">
-                    <img src="Discografía4.jpeg">
+                    <img src="cuatro.jpeg">
                     <p>Lost Highway </p>
                     <ol>
                     <li>Lost Highway - 4:15</li>
